--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fairness Monitoring Dashboard</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-  <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+  <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/recharts@2.5.0/dist/Recharts.js"></script>
+  <script src="https://unpkg.com/recharts@2.5.0/dist/Recharts.js"></script>
   <style>
     body {
       margin: 0;
@@ -21,34 +21,34 @@
   <div id="root"></div>
 
   <script type="text/babel">
-    const { useState, useEffect } = React;
-    const { LineChart, Line, XAxis, YAxis, CartesianGrid, Tooltip, Legend, ResponsiveContainer, ReferenceLine } = Recharts;
+    const { useState } = React;
+    const { LineChart, Line, XAxis, YAxis, CartesianGrid, Tooltip, ResponsiveContainer, ReferenceLine } = window.Recharts;
 
-    // Lucide icons as inline SVG components
-    const AlertTriangle = () => (
-      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round">
+    // Icon components
+    const AlertTriangle = ({ className = "" }) => (
+      <svg className={className} width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2">
         <path d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3Z"/>
         <line x1="12" y1="9" x2="12" y2="13"/>
         <line x1="12" y1="17" x2="12.01" y2="17"/>
       </svg>
     );
 
-    const CheckCircle = () => (
-      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round">
+    const CheckCircle = ({ className = "" }) => (
+      <svg className={className} width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2">
         <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"/>
         <polyline points="22 4 12 14.01 9 11.01"/>
       </svg>
     );
 
-    const TrendingUp = () => (
-      <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round">
+    const TrendingUp = ({ className = "" }) => (
+      <svg className={className} width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2">
         <polyline points="23 6 13.5 15.5 8.5 10.5 1 18"/>
         <polyline points="17 6 23 6 23 12"/>
       </svg>
     );
 
-    const Users = () => (
-      <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round">
+    const Users = ({ className = "" }) => (
+      <svg className={className} width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2">
         <path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"/>
         <circle cx="9" cy="7" r="4"/>
         <path d="M22 21v-2a4 4 0 0 0-3-3.87"/>
@@ -56,16 +56,15 @@
       </svg>
     );
 
-    const Activity = () => (
-      <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round">
+    const Activity = ({ className = "" }) => (
+      <svg className={className} width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2">
         <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/>
       </svg>
     );
 
     const FairnessDashboard = () => {
-      const [currentWeek, setCurrentWeek] = useState(12);
+      const [currentWeek] = useState(12);
 
-      // Simulated trend data for DP Ratio and EO Gap over 12 weeks
       const trendData = [
         { week: 'W1', dpRatio: 0.52, eoGap: -0.35, blackReferrals: 42, whiteReferrals: 108 },
         { week: 'W2', dpRatio: 0.49, eoGap: -0.38, blackReferrals: 39, whiteReferrals: 115 },
@@ -106,14 +105,13 @@
 
       return (
         <div className="min-h-screen bg-gradient-to-br from-slate-950 via-slate-900 to-slate-950 text-white p-8">
-          {/* Header */}
           <div className="mb-8">
             <div className="flex items-center justify-between mb-2">
               <h1 className="text-4xl font-bold bg-gradient-to-r from-blue-400 to-purple-500 bg-clip-text text-transparent">
                 Fairness Monitoring Dashboard
               </h1>
               <div className="flex items-center gap-3 px-4 py-2 bg-slate-800/50 rounded-lg border border-slate-700">
-                <Activity />
+                <Activity className="animate-pulse text-green-400" />
                 <span className="text-sm font-medium">Live Monitoring</span>
               </div>
             </div>
@@ -121,46 +119,27 @@
             <p className="text-slate-500 text-sm">Week {currentWeek} | Last Updated: 2 minutes ago</p>
           </div>
 
-          {/* Alert Banner */}
-          {dpStatus.status === 'critical' || eoStatus.status === 'critical' ? (
-            <div className="mb-6 p-4 bg-red-500/10 border border-red-500/30 rounded-lg flex items-center gap-3">
-              <AlertTriangle />
-              <div>
-                <p className="font-semibold text-red-400">Fairness Alert Triggered</p>
-                <p className="text-sm text-slate-300">Metrics below threshold. Escalation protocol initiated.</p>
-              </div>
-            </div>
-          ) : dpStatus.status === 'good' && eoStatus.status === 'good' ? (
-            <div className="mb-6 p-4 bg-green-500/10 border border-green-500/30 rounded-lg flex items-center gap-3">
-              <CheckCircle />
-              <div>
-                <p className="font-semibold text-green-400">System Operating Within Fairness Thresholds</p>
-                <p className="text-sm text-slate-300">All metrics meeting target benchmarks.</p>
-              </div>
-            </div>
-          ) : (
+          {dpStatus.status === 'warning' || eoStatus.status === 'warning' ? (
             <div className="mb-6 p-4 bg-yellow-500/10 border border-yellow-500/30 rounded-lg flex items-center gap-3">
-              <AlertTriangle />
+              <AlertTriangle className="w-6 h-6 text-yellow-500" />
               <div>
                 <p className="font-semibold text-yellow-400">Approaching Fairness Thresholds</p>
                 <p className="text-sm text-slate-300">Metrics improving but require continued monitoring.</p>
               </div>
             </div>
-          )}
+          ) : null}
 
-          {/* Key Metrics Cards */}
           <div className="grid grid-cols-1 md:grid-cols-4 gap-6 mb-8">
-            {/* DP Ratio Card */}
             <div className={`p-6 rounded-xl border ${dpStatus.bg} border-slate-700 backdrop-blur-sm`}>
               <div className="flex items-center justify-between mb-3">
                 <span className="text-slate-400 text-sm font-medium">DP Ratio</span>
-                {dpStatus.status === 'good' ? <CheckCircle /> : <AlertTriangle />}
+                {dpStatus.status === 'good' ? <CheckCircle className="w-5 h-5 text-green-500" /> : <AlertTriangle className={`w-5 h-5 ${dpStatus.color}`} />}
               </div>
               <div className={`text-4xl font-bold mb-2 ${dpStatus.color}`}>
                 {currentMetrics.dpRatio.toFixed(3)}
               </div>
               <div className="flex items-center gap-2 text-sm">
-                <TrendingUp />
+                <TrendingUp className="text-green-400" />
                 <span className="text-slate-300">+0.27 from W1</span>
               </div>
               <div className="mt-3 pt-3 border-t border-slate-700">
@@ -168,17 +147,16 @@
               </div>
             </div>
 
-            {/* EO Gap Card */}
             <div className={`p-6 rounded-xl border ${eoStatus.bg} border-slate-700 backdrop-blur-sm`}>
               <div className="flex items-center justify-between mb-3">
                 <span className="text-slate-400 text-sm font-medium">EO Gap</span>
-                {eoStatus.status === 'good' ? <CheckCircle /> : <AlertTriangle />}
+                {eoStatus.status === 'good' ? <CheckCircle className="w-5 h-5 text-green-500" /> : <AlertTriangle className={`w-5 h-5 ${eoStatus.color}`} />}
               </div>
               <div className={`text-4xl font-bold mb-2 ${eoStatus.color}`}>
                 {currentMetrics.eoGap.toFixed(3)}
               </div>
               <div className="flex items-center gap-2 text-sm">
-                <TrendingUp />
+                <TrendingUp className="text-green-400" />
                 <span className="text-slate-300">Improving</span>
               </div>
               <div className="mt-3 pt-3 border-t border-slate-700">
@@ -186,11 +164,10 @@
               </div>
             </div>
 
-            {/* Black Referrals */}
             <div className="p-6 rounded-xl border bg-blue-500/5 border-slate-700 backdrop-blur-sm">
               <div className="flex items-center justify-between mb-3">
                 <span className="text-slate-400 text-sm font-medium">Black Referrals</span>
-                <Users />
+                <Users className="text-blue-400" />
               </div>
               <div className="text-4xl font-bold mb-2 text-blue-400">
                 {currentMetrics.blackReferrals}
@@ -203,11 +180,10 @@
               </div>
             </div>
 
-            {/* White Referrals */}
             <div className="p-6 rounded-xl border bg-purple-500/5 border-slate-700 backdrop-blur-sm">
               <div className="flex items-center justify-between mb-3">
                 <span className="text-slate-400 text-sm font-medium">White Referrals</span>
-                <Users />
+                <Users className="text-purple-400" />
               </div>
               <div className="text-4xl font-bold mb-2 text-purple-400">
                 {currentMetrics.whiteReferrals}
@@ -221,9 +197,7 @@
             </div>
           </div>
 
-          {/* Charts Row */}
           <div className="grid grid-cols-1 md:grid-cols-2 gap-6 mb-8">
-            {/* DP Ratio Trend */}
             <div className="p-6 rounded-xl border border-slate-700 bg-slate-800/30 backdrop-blur-sm">
               <h3 className="text-lg font-semibold mb-4 text-slate-200">Demographic Parity Trend</h3>
               <ResponsiveContainer width="100%" height={250}>
@@ -241,7 +215,6 @@
               </ResponsiveContainer>
             </div>
 
-            {/* EO Gap Trend */}
             <div className="p-6 rounded-xl border border-slate-700 bg-slate-800/30 backdrop-blur-sm">
               <h3 className="text-lg font-semibold mb-4 text-slate-200">Equal Opportunity Gap Trend</h3>
               <ResponsiveContainer width="100%" height={250}>
@@ -262,7 +235,6 @@
             </div>
           </div>
 
-          {/* Confusion Matrix */}
           <div className="p-6 rounded-xl border border-slate-700 bg-slate-800/30 backdrop-blur-sm">
             <h3 className="text-lg font-semibold mb-4 text-slate-200">Confusion Matrix Breakdown</h3>
             <div className="grid grid-cols-1 md:grid-cols-2 gap-6">
